styles/TitleCarousel.module.css
.topContainer {
    height: 50%;
    width: auto;
    text-align: right;
}

.bottomContainer {
    height: 50%;
    width: auto;
    text-align: right;
}

.carousel{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    height: 100%;
    width: auto;
}

.image{
    height: auto;
    width: 100%;
}

.btn {
    background-color: transparent;
    border: transparent;
    font-family: var(--main-text);
}

.btn:hover {
    cursor: pointer;
}

.hidden {
    display: none;
}

.notHidden {
    display: block;
}

